# aotts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  build.gradle  proguard-rules.pro  settings.gradle
.github/DISCUSSION_TEMPLATE/: general.yml  ideas.yml  q-a.yml  show-and-tell.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android.yml
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  pico_jni.c
src/main/java/com/example/picottsengine/: PicoEngine.java  PicoNative.java  PicoTtsService.java  SettingsActivity.java
src/main/res/values/: strings.xml
src/main/res/xml/: tts_engine_settings.xml
